# sui-runner

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/commands/: build.rs  check.rs  dashboard.rs  deploy.rs  init.rs  mod.rs  wallet.rs
